Interface links :pencil2:

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -135,17 +135,17 @@ Figure 22: [Project Manage Users](https://mpcmarques.github.io/lbaw1743/project_
 ### UI17: Task Page:
 <img src="images/Interface/Desktop/UI17_Task.png" width="550" title="Task"> <img src="images/Interface/Mobile/UI17_Task.png" height="750" title="Task_Mobile">
 
-Figure 23: [Task Page]().
+Figure 23: [Task Page](https://mpcmarques.github.io/lbaw1743/task.html).
 
 ### UI18: Edit Task:
 <img src="images/Interface/Desktop/UI18_Edit_Task.png" width="550" title="Edit_Task"> <img src="images/Interface/Mobile/UI18_Edit_Task.png" height="513" title="Edit_Task_Mobile">
 
-Figure 24: [Edit Task]().
+Figure 24: [Edit Task](https://mpcmarques.github.io/lbaw1743/task/edit.html).
 
 ### UI19: Profile:
 <img src="images/Interface/Desktop/UI19_Profile.png" width="550" title="Profile"> <img src="images/Interface/Mobile/UI19_Profile.png" height="513" title="Profile_Mobile">
 
-Figure 25: [Profile]().
+Figure 25: [Profile](https://mpcmarques.github.io/lbaw1743/profile.html).
 
 ### UI20: Edit Profile:
 <img src="images/Interface/Desktop/UI20_Edit_Profile.png" width="550" title="Edit_Profile"> <img src="images/Interface/Mobile/UI20_Edit_Profile.png" height="513" title="Edit_Profile_Mobile">
@@ -170,22 +170,22 @@ Figure 29: [Search by Tasks]().
 ### UI24: Administration Log In:
 <img src="images/Interface/Desktop/UI24_Admin_Login.png" width="550" title="Admin_Login"> <img src="images/Interface/Mobile/UI24_Admin_Login.png" height="513" title="Admin_Login_Mobile">
 
-Figure 30: [Administration Log In]().
+Figure 30: [Administration Log In](https://mpcmarques.github.io/lbaw1743/admin.html).
 
 ### UI25: Administration Manage Projects:
 <img src="images/Interface/Desktop/UI25_Admin_Projects.png" width="550" title="Admin_Projects"> <img src="images/Interface/Mobile/UI25_Admin_Projects.png" height="513" title="Admin_Projects_Mobile">
 
-Figure 31: [Administration Manage Projects]().
+Figure 31: [Administration Manage Projects](https://mpcmarques.github.io/lbaw1743/admin/projects.html).
 
 ### UI26: Administration Manage Users:
 <img src="images/Interface/Desktop/UI26_Admin_Users.png" width="550" title="Admin_Users"> <img src="images/Interface/Mobile/UI26_Admin_Users.png" height="513" title="Admin_Users_Mobile">
 
-Figure 32: [Administration Manage Users]().
+Figure 32: [Administration Manage Users](https://mpcmarques.github.io/lbaw1743/admin/users.html).
 
 ### UI27: Error Page:
 <img src="images/Interface/Desktop/UI27_Error.png" width="550" title="Error"> <img src="images/Interface/Mobile/UI27_Error.png" height="513" title="Error_Mobile">
 
-Figure 33: [Error Page]().
+Figure 33: [Error Page](https://mpcmarques.github.io/lbaw1743/404.html).
 
 ***
 <!-- ## Revision history
