Final interface links :pencil2:

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -155,17 +155,17 @@ Figure 26: Edit Profile.
 ### UI21: Search by Projects:
 <img src="images/Interface/Desktop/UI21_Search_Projects.png" width="550" title="Search_Projects"> <img src="images/Interface/Mobile/UI21_Search_Projects.png" height="513" title="Search_Projects_Mobile">
 
-Figure 27: [Search by Projects]().
+Figure 27: [Search by Projects](https://mpcmarques.github.io/lbaw1743/search_projects.html).
 
 ### UI22: Search by Users:
 <img src="images/Interface/Desktop/UI22_Search_Users.png" width="550" title="Search_Users"> <img src="images/Interface/Mobile/UI22_Search_Users.png" height="513" title="Search_Users_Mobile">
 
-Figure 28: [Search by Users]().
+Figure 28: [Search by Users](https://mpcmarques.github.io/lbaw1743/search_users.html).
 
 ### UI23: Search by Tasks:
 <img src="images/Interface/Desktop/UI23_Search_Tasks.png" width="550" title="Search_Tasks"> <img src="images/Interface/Mobile/UI23_Search_Tasks.png" height="513" title="Search_Tasks_Mobile">
 
-Figure 29: [Search by Tasks]().
+Figure 29: [Search by Tasks](https://mpcmarques.github.io/lbaw1743/search_tasks.html).
 
 ### UI24: Administration Log In:
 <img src="images/Interface/Desktop/UI24_Admin_Login.png" width="550" title="Admin_Login"> <img src="images/Interface/Mobile/UI24_Admin_Login.png" height="513" title="Admin_Login_Mobile">
