Revision history updated :pencil2:

--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -188,13 +188,15 @@ Figure 32: [Administration Manage Users](https://mpcmarques.github.io/lbaw1743/a
 Figure 33: [Error Page](https://mpcmarques.github.io/lbaw1743/404.html).
 
 ***
-<!-- ## Revision history
+## Revision history
 
 Changes made to the first submission:
-1. Item 1
-1. Item 2
+1. Moved pages over to github pages.
+2. Added "Stories" to storyboard and also changed from UML to Wireflow using screenshots.
+3. Improved SiteMap.
+4. Added mobile support for every  page.
 
-*** -->
+***
 
 GROUP1743, 05/03/2018
 
