--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -35,157 +35,173 @@ Figure 1: Sitemap presenting the overall structure of the web application.
 
 ## 3. Storyboards
 
-<img src="images/Storyboard/LogIn.png" title="LogIn">
+<img src="images/Storyboard/storyboard_navbar.png" title="Sign up & Login">
 
-Figure 3: Log In from Home Page.
+Figure 2: Wireflow for the sign-in and sign-up interaction.
 
-<img src="images/Storyboard/NewProject.png" title="New Project">
+<img src="images/Storyboard/storyboard_footer.png" title="User's Options">
 
-Figure 4: New Project from Dashboard.
+Figure 3: Wireflow centered on the user's options.
 
-<img src="images/Storyboard/EditProfile.png" title="Edit Profile">
+<img src="images/Storyboard/dashboard.png" title="Dashboard">
 
-Figure 5: Edit Profile from Dashboard.
+Figure 4: Wireflow for the Authenticated User's Dashboard.
 
-<img src="images/Storyboard/CreateTask.png" title="Create Task">
+<img src="images/Storyboard/search.png" title="Search function">
 
-Figure 6: Create Task from Dashboard.
+Figure 5: Wireflow for the search function.
+
+<img src="images/Storyboard/profile.png" title="Profile interactions">
+
+Figure 6: Wireflow for the search function.
+
+<img src="images/Storyboard/new_project.png" title="Project Creation">
+
+Figure 7: Wireflow for the Authenticated User's Project Creation.
+
+<img src="images/Storyboard/going_to_task.png" title="Task Page">
+
+Figure 8: Wireflow for the Authenticated User's Task Page.
+
+<img src="images/Storyboard/admin.png" title="Admin options">
+
+Figure 9: Wireflow centered around Admin options.
 
 ## 4. Interfaces
 ### UI01: Homepage
 <img src="images/Interface/Desktop/UI01_Homepage.png" width="550" title="Homepage"> <img src="images/Interface/Mobile/UI01_Homepage.png" height="513" title="Homepage_Mobile">
 
-Figure 7: [Homepage](https://mpcmarques.github.io/lbaw1743/).
+Figure 10: [Homepage](https://mpcmarques.github.io/lbaw1743/).
 
 ### UI02: FAQ:
 <img src="images/Interface/Desktop/UI02_FAQ.png" width="550" title="FAQ"> <img src="images/Interface/Mobile/UI02_FAQ.png" height="513" title="FAQ_Mobile">
 
-Figure 8: [FAQ](https://mpcmarques.github.io/lbaw1743/faq.html).
+Figure 11: [FAQ](https://mpcmarques.github.io/lbaw1743/faq.html).
 
 ### UI03: About:
 <img src="images/Interface/Desktop/UI03_About.png" width="550" title="About"> <img src="images/Interface/Mobile/UI03_About.png" height="513" title="About_Mobile">
 
-Figure 9: [About](https://mpcmarques.github.io/lbaw1743/about.html).
+Figure 12: [About](https://mpcmarques.github.io/lbaw1743/about.html).
 
 ### UI04: Contact:
 <img src="images/Interface/Desktop/UI04_Contact.png" width="550" title="Contact"> <img src="images/Interface/Mobile/UI04_Contact.png" height="513" title="Contact_Mobile">
 
-Figure 10: [Contact](https://mpcmarques.github.io/lbaw1743/contact.html).
+Figure 13: [Contact](https://mpcmarques.github.io/lbaw1743/contact.html).
 
 ### UI05: Log In:
 <img src="images/Interface/Desktop/UI05_Login.png" width="550" title="Login"> <img src="images/Interface/Mobile/UI05_Login.png" height="513" title="Login_Mobile">
 
-Figure 11: Log In.
+Figure 14: Log In.
 
 ### UI06: Register:
 <img src="images/Interface/Desktop/UI06_Register.png" width="550" title="Register"> <img src="images/Interface/Mobile/UI06_Register.png" height="513" title="Register_Mobile">
 
-Figure 12: Register.
+Figure 15: Register.
 
 ### UI07: Dashboard:
 <img src="images/Interface/Desktop/UI07_Dashboard.png" width="550" title="Dashboard"> <img src="images/Interface/Mobile/UI07_Dashboard.png" height="513" title="Dashboard_Mobile">
 
-Figure 13: [Dashboard](https://mpcmarques.github.io/lbaw1743/dashboard.html).
+Figure 16: [Dashboard](https://mpcmarques.github.io/lbaw1743/dashboard.html).
 
 ### UI08: Dashboard My Projects:
 <img src="images/Interface/Desktop/UI08_Dashboard_Projects.png" width="550" title="Dashboard_Projects"> <img src="images/Interface/Mobile/UI08_Dashboard_Projects.png" height="513" title="Dashboard_Projects_Mobile">
 
-Figure 14: [Dashboard My Projects](https://mpcmarques.github.io/lbaw1743/dashboard_my_projects.html).
+Figure 17: [Dashboard My Projects](https://mpcmarques.github.io/lbaw1743/dashboard_my_projects.html).
 
 ### UI09: Dashboard My Tasks:
 <img src="images/Interface/Desktop/UI09_Dashboard_Tasks.png" width="550" title="Dashboard_Tasks"> <img src="images/Interface/Mobile/UI09_Dashboard_Tasks.png" height="513" title="Dashboard_Tasks_Mobile">
 
-Figure 15: [Dashboard My Tasks](https://mpcmarques.github.io/lbaw1743/dashboard_tasks.html).
+Figure 18: [Dashboard My Tasks](https://mpcmarques.github.io/lbaw1743/dashboard_tasks.html).
 
 ### UI10: New Project:
 <img src="images/Interface/Desktop/UI10_New_Project.png" width="550" title="New_Project"> <img src="images/Interface/Mobile/UI10_New_Project.png" height="513" title="New_Project_Mobile">
 
-Figure 16: [New Project](https://mpcmarques.github.io/lbaw1743/dashboard/new-project.html).
+Figure 19: [New Project](https://mpcmarques.github.io/lbaw1743/dashboard/new-project.html).
 
 ### UI11: Project Tasks:
 <img src="images/Interface/Desktop/UI11_Project_Tasks.png" width="550" title="Project_Tasks"> <img src="images/Interface/Mobile/UI11_Project_Tasks.png" height="513" title="Project_Tasks_Mobile">
 
-Figure 17: [Project Tasks](https://mpcmarques.github.io/lbaw1743/project_tasks.html).
+Figure 20: [Project Tasks](https://mpcmarques.github.io/lbaw1743/project_tasks.html).
 
 ### UI12: Project Forum:
 <img src="images/Interface/Desktop/UI12_Project_Forum.png" width="550" title="Project_Forum"> <img src="images/Interface/Mobile/UI12_Project_Forum.png" height="720" title="Project_Forum_Mobile">
 
-Figure 18: [Project Forum](https://mpcmarques.github.io/lbaw1743/project_forum.html).
+Figure 21: [Project Forum](https://mpcmarques.github.io/lbaw1743/project_forum.html).
 
 ### UI13: Project Members:
 <img src="images/Interface/Desktop/UI13_Project_Members.png" width="550" title="Project_Members"> <img src="images/Interface/Mobile/UI13_Project_Members.png" height="513" title="Project_Members_Mobile">
 
-Figure 19: [Project Members](https://mpcmarques.github.io/lbaw1743/project_members.html).
+Figure 22: [Project Members](https://mpcmarques.github.io/lbaw1743/project_members.html).
 
 ### UI14: Project Options:
 <img src="images/Interface/Desktop/UI14_Project_Options.png" width="550" title="Project_Options"> <img src="images/Interface/Mobile/UI14_Project_Options.png" height="530" title="Project_Options_Mobile">
 
-Figure 20: [Project Options](https://mpcmarques.github.io/lbaw1743/project_options.html).
+Figure 23: [Project Options](https://mpcmarques.github.io/lbaw1743/project_options.html).
 
 ### UI15: Project Manage Tasks:
 <img src="images/Interface/Desktop/UI15_Project_Manage_Tasks.png" width="550" title="Project_Manage_Tasks"> <img src="images/Interface/Mobile/UI15_Project_Manage_Tasks.png" height="513" title="Project_Manage_Tasks_Mobile">
 
-Figure 21: [Project Manage Tasks](https://mpcmarques.github.io/lbaw1743/project_manage_tasks.html).
+Figure 24: [Project Manage Tasks](https://mpcmarques.github.io/lbaw1743/project_manage_tasks.html).
 
 ### UI16: Project Manage Users:
 <img src="images/Interface/Desktop/UI16_Project_Manage_Users.png" width="550" title="Project_Manage_Users"> <img src="images/Interface/Mobile/UI16_Project_Manage_Users.png" height="513" title="Project_Manage_Users_Mobile">
 
-Figure 22: [Project Manage Users](https://mpcmarques.github.io/lbaw1743/project_manage_users.html).
+Figure 25: [Project Manage Users](https://mpcmarques.github.io/lbaw1743/project_manage_users.html).
 
 ### UI17: Task Page:
 <img src="images/Interface/Desktop/UI17_Task.png" width="550" title="Task"> <img src="images/Interface/Mobile/UI17_Task.png" height="750" title="Task_Mobile">
 
-Figure 23: [Task Page](https://mpcmarques.github.io/lbaw1743/task.html).
+Figure 26: [Task Page](https://mpcmarques.github.io/lbaw1743/task.html).
 
 ### UI18: Edit Task:
 <img src="images/Interface/Desktop/UI18_Edit_Task.png" width="550" title="Edit_Task"> <img src="images/Interface/Mobile/UI18_Edit_Task.png" height="513" title="Edit_Task_Mobile">
 
-Figure 24: [Edit Task](https://mpcmarques.github.io/lbaw1743/task/edit.html).
+Figure 27: [Edit Task](https://mpcmarques.github.io/lbaw1743/task/edit.html).
 
 ### UI19: Profile:
 <img src="images/Interface/Desktop/UI19_Profile.png" width="550" title="Profile"> <img src="images/Interface/Mobile/UI19_Profile.png" height="513" title="Profile_Mobile">
 
-Figure 25: [Profile](https://mpcmarques.github.io/lbaw1743/profile.html).
+Figure 28: [Profile](https://mpcmarques.github.io/lbaw1743/profile.html).
 
 ### UI20: Edit Profile:
 <img src="images/Interface/Desktop/UI20_Edit_Profile.png" width="550" title="Edit_Profile"> <img src="images/Interface/Mobile/UI20_Edit_Profile.png" height="513" title="Edit_Profile_Mobile">
 
-Figure 26: Edit Profile.
+Figure 29: Edit Profile.
 
 ### UI21: Search by Projects:
 <img src="images/Interface/Desktop/UI21_Search_Projects.png" width="550" title="Search_Projects"> <img src="images/Interface/Mobile/UI21_Search_Projects.png" height="513" title="Search_Projects_Mobile">
 
-Figure 27: [Search by Projects](https://mpcmarques.github.io/lbaw1743/search_projects.html).
+Figure 30: [Search by Projects](https://mpcmarques.github.io/lbaw1743/search_projects.html).
 
 ### UI22: Search by Users:
 <img src="images/Interface/Desktop/UI22_Search_Users.png" width="550" title="Search_Users"> <img src="images/Interface/Mobile/UI22_Search_Users.png" height="513" title="Search_Users_Mobile">
 
-Figure 28: [Search by Users](https://mpcmarques.github.io/lbaw1743/search_users.html).
+Figure 31: [Search by Users](https://mpcmarques.github.io/lbaw1743/search_users.html).
 
 ### UI23: Search by Tasks:
 <img src="images/Interface/Desktop/UI23_Search_Tasks.png" width="550" title="Search_Tasks"> <img src="images/Interface/Mobile/UI23_Search_Tasks.png" height="513" title="Search_Tasks_Mobile">
 
-Figure 29: [Search by Tasks](https://mpcmarques.github.io/lbaw1743/search_tasks.html).
+Figure 32: [Search by Tasks](https://mpcmarques.github.io/lbaw1743/search_tasks.html).
 
 ### UI24: Administration Log In:
 <img src="images/Interface/Desktop/UI24_Admin_Login.png" width="550" title="Admin_Login"> <img src="images/Interface/Mobile/UI24_Admin_Login.png" height="513" title="Admin_Login_Mobile">
 
-Figure 30: [Administration Log In](https://mpcmarques.github.io/lbaw1743/admin.html).
+Figure 33: [Administration Log In](https://mpcmarques.github.io/lbaw1743/admin.html).
 
 ### UI25: Administration Manage Projects:
 <img src="images/Interface/Desktop/UI25_Admin_Projects.png" width="550" title="Admin_Projects"> <img src="images/Interface/Mobile/UI25_Admin_Projects.png" height="513" title="Admin_Projects_Mobile">
 
-Figure 31: [Administration Manage Projects](https://mpcmarques.github.io/lbaw1743/admin/projects.html).
+Figure 34: [Administration Manage Projects](https://mpcmarques.github.io/lbaw1743/admin/projects.html).
 
 ### UI26: Administration Manage Users:
 <img src="images/Interface/Desktop/UI26_Admin_Users.png" width="550" title="Admin_Users"> <img src="images/Interface/Mobile/UI26_Admin_Users.png" height="513" title="Admin_Users_Mobile">
 
-Figure 32: [Administration Manage Users](https://mpcmarques.github.io/lbaw1743/admin/users.html).
+Figure 35: [Administration Manage Users](https://mpcmarques.github.io/lbaw1743/admin/users.html).
 
 ### UI27: Error Page:
 <img src="images/Interface/Desktop/UI27_Error.png" width="550" title="Error"> <img src="images/Interface/Mobile/UI27_Error.png" height="513" title="Error_Mobile">
 
-Figure 33: [Error Page](https://mpcmarques.github.io/lbaw1743/404.html).
+Figure 36: [Error Page](https://mpcmarques.github.io/lbaw1743/404.html).
 
 ***
 ## Revision history
@@ -198,7 +214,7 @@ Changes made to the first submission:
 
 ***
 
-GROUP1743, 05/03/2018
+GROUP1743, 12/03/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt   
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt   
