--- a/artifacts/A3/A3.md
+++ b/artifacts/A3/A3.md
@@ -53,7 +53,7 @@ Figure 5: Wireflow for the search function.
 
 <img src="images/Storyboard/profile.png" title="Profile interactions">
 
-Figure 6: Wireflow for the search function.
+Figure 6: Wireflow for the profile interactions.
 
 <img src="images/Storyboard/new_project.png" title="Project Creation">
 
