--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -8,10 +8,14 @@
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | Table1(__id__, attribute NN)                                         |
-| R02                | Table2(__id__, attribute → Table1 NN)                                |
-| R03                | Table3(__id1__, id2 → Table2, attribute UK NN)                       |
-| R04                | Table4((__id1__, __id2__) → Table3, id3, attribute CK attribute > 0) |
+| R01                | User(idUser PK, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate)                                         |
+| R02                | Premium(idPremium PK, startDate NN, duration > 0 NN,)                                |
+| R03                | Admin(idAdmin PK, username UK NN, email UK NN, password NN)                       |
+| R04                | Banned( startDate NN, duration > 0, motive, idUser → User NN) |
+| R05                | Joined(idJoined PK, joinedDate NN) |
+| R06                | Role(idRole PK, title NN, idUser → User NN) |
+| R07                | Project(idProject PK, creationDate NN, name NN, decription, private NN) |
+| R08                | Role(idRole PK, title NN, idUser → User NN) |
 
 
 ## 2. Domains
