--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -9,14 +9,17 @@
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
 | R01                | User(idUser PK, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate)                                         |
-| R02                | Premium(idPremium PK, startDate NN, duration > 0 NN,)                                |
+| R02                | Premium(idPremium PK, startDate NN, duration CK duration > 0 NN,)                                |
 | R03                | Admin(idAdmin PK, username UK NN, email UK NN, password NN)                       |
-| R04                | Banned( startDate NN, duration > 0, motive, idUser → User NN) |
+| R04                | Banned( startDate NN, duration CK duration > 0, motive, idUser → User NN) |
 | R05                | Joined(idJoined PK, joinedDate NN) |
 | R06                | Role(idRole PK, title NN, idUser → User NN) |
 | R07                | Project(idProject PK, creationDate NN, name NN, decription, private NN) |
-| R08                | Role(idRole PK, title NN, idUser → User NN) |
-
+| R08                | Project_Forum(idForum PK, idProject → Project NN) |
+| R09                | Forum_Post(idPost PK, creationDate NN, title NN, text NN, idForum → Project_Forum NN, idUser → User NN) |
+| R10                | Post_Reply(idReply PK, creationDate NN, text NN, idPost → Forum_Post NN, idUser → User NN) |
+| R11                | City(idCity PK, name NN) |
+| R12                | City(idCountry PK, name NN) |
 
 ## 2. Domains
 
