--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -8,9 +8,9 @@
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | User(idUser PK, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate)                                         |
-| R02                | Premium(idPremium PK, startDate NN, duration CK duration > 0 NN,)                                |
-| R03                | Admin(idAdmin PK, username UK NN, email UK NN, password NN)                       |
+| R01                | User(idUser PK, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate) |
+| R02                | Premium(idPremium PK, startDate NN, duration CK duration > 0 NN,) |
+| R03                | Admin(idAdmin PK, username UK NN, email UK NN, password NN) |
 | R04                | Banned( startDate NN, duration CK duration > 0, motive, idUser → User NN) |
 | R05                | Joined(idJoined PK, joinedDate NN) |
 | R06                | Role(idRole PK, title NN, idUser → User NN) |
@@ -20,6 +20,11 @@
 | R10                | Post_Reply(idReply PK, creationDate NN, text NN, idPost → Forum_Post NN, idUser → User NN) |
 | R11                | City(idCity PK, name NN) |
 | R12                | City(idCountry PK, name NN) |
+| R13                | Task(<u>idTask</u>, title, description, creationDate, deadline, lastEditDate) |
+| R14                | Tag(<u>idTag</u>, name) |
+| R15                | Comment(<u>idComment</u>, creationDate, text) |
+| R16                | Close Request(<u>idRequest</u>, title, description) |
+
 
 ## 2. Domains
 
