--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -8,22 +8,28 @@
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | User(idUser PK, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate) |
-| R02                | Premium(idPremium PK, startDate NN, duration CK duration > 0 NN,) |
+| R01                | User(<u>idUser</u> PK, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate, idCity->City) |
+| R02                | Assigned(<u>idUser</u>->User, <u>idTask</u>->Task) |
+| R03                | Editor(<u>idUser</u>->User, <u>idTask</u>->Task) |
+| R05                | Task(<u>idTask</u> PK, title NN, description, creationDate NN, deadline, lastEditDate, idUser->User, idProject->Project) |
+| R17                | Close Request(<u>idRequest</u> PK, title, description, idUser->User, idTask->Task) |
+| R16                | Comment(<u>idComment</u> PK, creationDate, text, idTask->Task) |
+| R1X                | Comment Relationship(parent->Comment, <u>son</u>->Comment) |
+| R15                | Tag(<u>idTag</u> PK, name) |
+| R0X                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
+| R07                | Project(<u>idProject</u> PK, creationDate NN, name NN, decription, private NN) |
+| R05                | Joined(<u>idJoined</u> PK, joinedDate NN, idProject->Project, idUser->User, idRole->Role) |
+| R06                | Role(<u>idRole</u> PK, title NN) |
+| R02                | Premium(<u>idPremium</u> PK, startDate NN, duration CK duration > 0 NN, idUser->User) |
+
+| R08                | Project_Forum(idForum PK, idProject->Project NN) |
+| R09                | Forum Post(idPost PK, creationDate NN, title NN, text NN, idForum → Project_Forum NN, idUser → User NN) |
+| R10                | Post Reply(idReply PK, creationDate NN, text NN, idPost → Forum_Post NN, idUser → User NN) |
+| R11                | City(<u>idCity</u> PK, name NN, idCountry->Country) |
+| R12                | Country(<u>idCountry</u> PK, name NN) |
+| R14                | Completed Task(completionDate NN) |
 | R03                | Admin(idAdmin PK, username UK NN, email UK NN, password NN) |
 | R04                | Banned( startDate NN, duration CK duration > 0, motive, idUser → User NN) |
-| R05                | Joined(idJoined PK, joinedDate NN) |
-| R06                | Role(idRole PK, title NN, idUser → User NN) |
-| R07                | Project(idProject PK, creationDate NN, name NN, decription, private NN) |
-| R08                | Project_Forum(idForum PK, idProject → Project NN) |
-| R09                | Forum_Post(idPost PK, creationDate NN, title NN, text NN, idForum → Project_Forum NN, idUser → User NN) |
-| R10                | Post_Reply(idReply PK, creationDate NN, text NN, idPost → Forum_Post NN, idUser → User NN) |
-| R11                | City(idCity PK, name NN) |
-| R12                | City(idCountry PK, name NN) |
-| R13                | Task(<u>idTask</u>, title, description, creationDate, deadline, lastEditDate) |
-| R14                | Tag(<u>idTag</u>, name) |
-| R15                | Comment(<u>idComment</u>, creationDate, text) |
-| R16                | Close Request(<u>idRequest</u>, title, description) |
 
 
 ## 2. Domains
