--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -8,28 +8,28 @@
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | User(<u>idUser</u> PK, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate, idCity->City) |
+| R01                | User(<u>idUser</u>, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate, idCity->City) |
 | R02                | Assigned(<u>idUser</u>->User, <u>idTask</u>->Task) |
 | R03                | Editor(<u>idUser</u>->User, <u>idTask</u>->Task) |
-| R05                | Task(<u>idTask</u> PK, title NN, description, creationDate NN, deadline, lastEditDate, idUser->User, idProject->Project) |
-| R17                | Close Request(<u>idRequest</u> PK, title, description, idUser->User, idTask->Task) |
-| R16                | Comment(<u>idComment</u> PK, creationDate, text, idTask->Task) |
+| R05                | Task(<u>idTask</u>, title NN, description, creationDate NN, deadline, lastEditDate, idUser->User, idProject->Project) |
+| R17                | Close Request(<u>idRequest</u>, title, description, idUser->User, idTask->Task) |
+| R14                | Completed Task(<u>idTask</u>->Task, completionDate NN) |
+| R16                | Comment(<u>idComment</u>, creationDate, text, idTask->Task) |
 | R1X                | Comment Relationship(parent->Comment, <u>son</u>->Comment) |
-| R15                | Tag(<u>idTag</u> PK, name) |
+| R15                | Tag(<u>idTag</u>, name) |
 | R0X                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
-| R07                | Project(<u>idProject</u> PK, creationDate NN, name NN, decription, private NN) |
-| R05                | Joined(<u>idJoined</u> PK, joinedDate NN, idProject->Project, idUser->User, idRole->Role) |
-| R06                | Role(<u>idRole</u> PK, title NN) |
-| R02                | Premium(<u>idPremium</u> PK, startDate NN, duration CK duration > 0 NN, idUser->User) |
-
-| R08                | Project_Forum(idForum PK, idProject->Project NN) |
-| R09                | Forum Post(idPost PK, creationDate NN, title NN, text NN, idForum → Project_Forum NN, idUser → User NN) |
-| R10                | Post Reply(idReply PK, creationDate NN, text NN, idPost → Forum_Post NN, idUser → User NN) |
-| R11                | City(<u>idCity</u> PK, name NN, idCountry->Country) |
-| R12                | Country(<u>idCountry</u> PK, name NN) |
-| R14                | Completed Task(completionDate NN) |
-| R03                | Admin(idAdmin PK, username UK NN, email UK NN, password NN) |
-| R04                | Banned( startDate NN, duration CK duration > 0, motive, idUser → User NN) |
+| R07                | Project(<u>idProject</u>, creationDate NN, name NN, decription, private NN, idForum->Forum UK) |
+| R05                | Joined(<u>idJoined</u>, joinedDate NN, idProject->Project, idUser->User, idRole->Role) |
+| R06                | Role(<u>idRole</u>, title NN) |
+| R02                | Premium(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
+| R08                | Project_Forum(<u>idForum</u> ) |
+| R09                | Forum Post(<u>idPost</u>, creationDate NN, title NN, text NN, idForum->Project Forum, idUser->User) |
+| R10                | Post Reply(<u>idReply</u>, creationDate NN, text NN, idUser->User) |
+| R1X                | Post Relationship(parent->Post Reply, <u>son</u>->Post Reply) |
+| R11                | City(<u>idCity</u>, name NN, idCountry->Country) |
+| R12                | Country(<u>idCountry</u>, name NN) |
+| R03                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
+| R04                | Banned(<u>idUser</u>->User, startDate NN, duration CK duration > 0, motive) |
 
 
 ## 2. Domains
