added ROLE to domain

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -40,7 +40,7 @@ The specification of additional domains can also be made in a compact form, usin
 | ----------- | ------------------------------ |
 | Today	      | DATE DEFAULT CURRENT_DATE      |
 | Priority    | ENUM ('High', 'Medium', 'Low') |
-
+| Role        | ENUM ('Owner' , 'Coordinator', 'Member'|
 
 ## 3. Functional Dependencies and schema validation
 
