added database credentials and fixed A4 introduction :books:

--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -1,5 +1,7 @@
 # A4: Conceptual Data Model
 
+This artifact contains the overview of the interface elements and features for our **Project Management** Web Application.
+
 ## 1. Class diagram
 
 <img src="images/UML.png" title="UML Class diagram">
