Updated UML & Added revision history to A4.md

--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -19,18 +19,21 @@ Figure 1: UML Class diagram.
 
 -->
 
-<!--
+
 ***
  ## Revision history
 
 Changes made to the first submission:
-1. Item 1
-1. Item 2
--->
+1. Removed Joined class, instead made it a association class.
+2. Added data types for all attributes.
+3. Improved readability.
+4. Removed both our subclasses for User and Task.
+5. Created Edits association classes.
+6. Fixed some constraints (eg. Country name unique).
 
 ***
 
-GROUP1743, 12/03/2018
+GROUP1743, 18/03/2018
 
 > Mateus Pedroza Cortes Marques, up201601876@fe.up.pt   
 > Bernardo Manuel Costa Barbosa, up201503477@fe.up.pt   
