Updated UML yet again, some items added to revision history :pencil2:

--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -30,6 +30,8 @@ Changes made to the first submission:
 4. Removed both our subclasses for User and Task.
 5. Created Edits association classes.
 6. Fixed some constraints (eg. Country name unique).
+7. Added some business rules (eg. Close request).
+8. Removed Reply self-association.
 
 ***
 
