Finished relational model, from UML :pencil2: :zap:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -8,38 +8,38 @@
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | User(<u>idUser</u>, username UK NN, password NN, email NN UK, gender, name, institution, description, birthDate, idCity->City) |
-| R02                | Assigned(<u>idUser</u>->User, <u>idTask</u>->Task) |
-| R03                | Editor(<u>idUser</u>->User, <u>idTask</u>->Task) |
-| R05                | Task(<u>idTask</u>, title NN, description, creationDate NN, deadline, lastEditDate, idUser->User, idProject->Project) |
-| R17                | Close Request(<u>idRequest</u>, title, description, idUser->User, idTask->Task) |
-| R14                | Completed Task(<u>idTask</u>->Task, completionDate NN) |
-| R16                | Comment(<u>idComment</u>, creationDate, text, idTask->Task) |
-| R1X                | Comment Relationship(parent->Comment, <u>son</u>->Comment) |
-| R15                | Tag(<u>idTag</u>, name) |
-| R0X                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
-| R07                | Project(<u>idProject</u>, creationDate NN, name NN, decription, private NN, idForum->Forum UK) |
-| R05                | Joined(<u>idJoined</u>, joinedDate NN, idProject->Project, idUser->User, idRole->Role) |
-| R06                | Role(<u>idRole</u>, title NN) |
-| R02                | Premium(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
-| R08                | Project_Forum(<u>idForum</u> ) |
-| R09                | Forum Post(<u>idPost</u>, creationDate NN, title NN, text NN, idForum->Project Forum, idUser->User) |
-| R10                | Post Reply(<u>idReply</u>, creationDate NN, text NN, idUser->User) |
-| R1X                | Post Relationship(parent->Post Reply, <u>son</u>->Post Reply) |
-| R11                | City(<u>idCity</u>, name NN, idCountry->Country) |
-| R12                | Country(<u>idCountry</u>, name NN) |
-| R03                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
-| R04                | Banned(<u>idUser</u>->User, startDate NN, duration CK duration > 0, motive) |
+| R01                | User(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate, idCountry->Country) |
+| R02                | Task(<u>idTask</u>, creationDate NN, title NN, description, deadline, completed NN, completedDate, idUser->User, idProject->Project) |
+| R03                | Assigned(<u>idUser</u>->User, <u>idTask</u>->Task) |
+| R04                | Edit Task Info(<u>idUser</u>->User, <u>idTask</u>->Task, editDate NN, oldTitle NN, oldDescription, oldDeadline) |
+| R05                | Close Request(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->User, idTask->Task) |
+| R06                | Tag(<u>idTag</u>, name UK NN) |
+| R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
+| R08                | Comment(<u>idComment</u>, creationDate NN, content NN, idTask->Task, idUser->User) |
+| R09                | Edit Comment Info(<u>idUser</u>->User, <u>idComment</u>->Comment, editDate NN, oldContent NN) |
+| R10                | Thread(parent->Comment, <u>son</u>->Comment) |
+| R11                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
+| R12                | Joined(<u>idUser</u>->User, <u>idProject</u>->Project, joinedDate NN, leftDate, role NN) |
+| R13                | Premium Signature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
+| R14                | Project_Forum(<u>idForum</u> ) |
+| R15                | Forum Post(<u>idPost</u>, creationDate NN, title NN, content NN, idForum->Project Forum, idUser->User) |
+| R16                | Reply(<u>idReply</u>, creationDate NN, content NN, idUser->User) |
+| R17                | Country(<u>idCountry</u>, name UK NN) |
+| R18                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
+| R19                | Banned Record(<u>idBan</u>, startDate NN, duration CK duration > 0, motive, idUser->User, idAdmin->Admin) |
 
+<!--
+UK - UNIQUE
+NN - NOT NULL
+CK - CHECK (CONDITION)
+-->
 
 ## 2. Domains
 
 The specification of additional domains can also be made in a compact form, using the notation:
 
-| Domain Name | Domain Specification           |
-| ----------- | ------------------------------ |
-| Today	      | DATE DEFAULT CURRENT_DATE      |
-| Priority    | ENUM ('High', 'Medium', 'Low') |
+| Domain Name | Domain Specification                   |
+| ----------- | -------------------------------------- |
 | Role        | ENUM ('Owner' , 'Coordinator', 'Member'|
 
 ## 3. Functional Dependencies and schema validation
