--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -11,22 +11,22 @@
 | R01                | User(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate, idCountry->Country) |
 | R02                | Task(<u>idTask</u>, creationDate NN, title NN, description, deadline, completed NN, completedDate, idUser->User, idProject->Project) |
 | R03                | Assigned(<u>idUser</u>->User, <u>idTask</u>->Task) |
-| R04                | Edit Task Info(<u>idUser</u>->User, <u>idTask</u>->Task, editDate NN, oldTitle NN, oldDescription, oldDeadline) |
-| R05                | Close Request(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->User, idTask->Task) |
+| R04                | EditTaskInfo(<u>idUser</u>->User, <u>idTask</u>->Task, editDate NN, oldTitle NN, oldDescription, oldDeadline) |
+| R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->User, idTask->Task) |
 | R06                | Tag(<u>idTag</u>, name UK NN) |
 | R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
 | R08                | Comment(<u>idComment</u>, creationDate NN, content NN, idTask->Task, idUser->User) |
-| R09                | Edit Comment Info(<u>idUser</u>->User, <u>idComment</u>->Comment, editDate NN, oldContent NN) |
+| R09                | EditCommentInfo(<u>idUser</u>->User, <u>idComment</u>->Comment, editDate NN, oldContent NN) |
 | R10                | Thread(parent->Comment, <u>son</u>->Comment) |
 | R11                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
 | R12                | Joined(<u>idUser</u>->User, <u>idProject</u>->Project, joinedDate NN, leftDate, role NN) |
-| R13                | Premium Signature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
-| R14                | Project_Forum(<u>idForum</u> ) |
+| R13                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
+| R14                | ProjectForum(<u>idForum</u> ) |
 | R15                | Forum Post(<u>idPost</u>, creationDate NN, title NN, content NN, idForum->Project Forum, idUser->User) |
 | R16                | Reply(<u>idReply</u>, creationDate NN, content NN, idUser->User) |
 | R17                | Country(<u>idCountry</u>, name UK NN) |
 | R18                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
-| R19                | Banned Record(<u>idBan</u>, startDate NN, duration CK duration > 0, motive, idUser->User, idAdmin->Admin) |
+| R19                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > 0, motive, idUser->User, idAdmin->Admin) |
 
 <!--
 UK - UNIQUE
