Updated A4 revision history :speech_balloon:

--- a/artifacts/A4/A4.md
+++ b/artifacts/A4/A4.md
@@ -1,6 +1,6 @@
 # A4: Conceptual Data Model
 
-This artifact contains the overview of the interface elements and features for our **Project Management** Web Application.
+The Conceptual Domain Model contains the identification and description of the entities of the domain and the relationships between them in an UML class diagram representing our **Project Management** Web Application.
 
 ## 1. Class diagram
 
@@ -21,17 +21,17 @@ Figure 1: UML Class diagram.
 
 
 ***
- ## Revision history
+## Revision history
 
 Changes made to the first submission:
-1. Removed Joined class, instead made it a association class.
+1. Made Joined class a association class.
 2. Added data types for all attributes.
 3. Improved readability.
 4. Removed both our subclasses for User and Task.
-5. Created Edits association classes.
-6. Fixed some constraints (eg. Country name unique).
-7. Added some business rules (eg. Close request).
-8. Removed Reply self-association.
+5. Created association classes for when a Task or a Comment is edited.
+6. Fixed some constraints (e.g. Made the name attribute of the Country class unique).
+7. Added some business rules (e.g. Close request).
+8. Removed Reply self-association, but kept the Comment self-association.
 
 ***
 
