--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -1,5 +1,6 @@
 # A5: Relational Schema, validation and schema refinement
 
+This artifact contains the Relational Schema obtained by mapping from the Conceptual Data Model of our **Project Management** Web Application. The Relational Schema includes the relation schema, attributes, domains, primary keys, foreign keys and other integrity rules: UNIQUE, DEFAULT, NOT NULL, CHECK.
 
 ## 1. Relational Schema
 
