Updated relational schema :speech_balloon:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -18,13 +18,13 @@ This artifact contains the Relational Schema obtained by mapping from the Concep
 | R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
 | R08                | Comment(<u>idComment</u>, creationDate NN, content NN, idTask->Task, idUser->User) |
 | R09                | EditCommentInfo(<u>idUser</u>->User, <u>idComment</u>->Comment, editDate NN, oldContent NN) |
-| R10                | Thread(parent->Comment, <u>son</u>->Comment) |
+| R10                | Thread(idParent->Comment, <u>idSon</u>->Comment) |
 | R11                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
 | R12                | Joined(<u>idUser</u>->User, <u>idProject</u>->Project, joinedDate NN, leftDate, role NN) |
 | R13                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
-| R14                | ProjectForum(<u>idForum</u> ) |
-| R15                | Forum Post(<u>idPost</u>, creationDate NN, title NN, content NN, idForum->Project Forum, idUser->User) |
-| R16                | Reply(<u>idReply</u>, creationDate NN, content NN, idUser->User) |
+| R14                | ProjectForum(<u>idForum</u>) |
+| R15                | ForumPost(<u>idPost</u>, creationDate NN, title NN, content NN, idForum->Project Forum, idUser->User) |
+| R16                | Reply(<u>idReply</u>, creationDate NN, content NN, idPost->ForumPost, idUser->User) |
 | R17                | Country(<u>idCountry</u>, name UK NN) |
 | R18                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
 | R19                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > 0, motive, idUser->User, idAdmin->Admin) |
