Added sql code to artifact, renamed User->UserTable  :bug: :pencil2:

--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -9,25 +9,25 @@ This artifact contains the Relational Schema obtained by mapping from the Concep
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
-| R01                | User(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate, idCountry->Country) |
-| R02                | Task(<u>idTask</u>, creationDate NN, title NN, description, deadline, completed NN, completedDate, idUser->User, idProject->Project) |
-| R03                | Assigned(<u>idUser</u>->User, <u>idTask</u>->Task) |
-| R04                | EditTaskInfo(<u>idUser</u>->User, <u>idTask</u>->Task, editDate NN, oldTitle NN, oldDescription, oldDeadline) |
-| R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->User, idTask->Task) |
+| R01                | UserTable(<u>idUser</u>, username UK NN, password NN, email UK NN, premium NN, banned NN, name, gender, address,institution, description, birthDate, idCountry->Country) |
+| R02                | Task(<u>idTask</u>, creationDate NN, title NN, description, deadline, completed NN, completedDate, idUser->UserTable, idProject->Project) |
+| R03                | Assigned(<u>idUser</u>->UserTable, <u>idTask</u>->Task) |
+| R04                | EditTaskInfo(<u>idUser</u>->UserTable, <u>idTask</u>->Task, editDate NN, oldTitle NN, oldDescription, oldDeadline) |
+| R05                | CloseRequest(<u>idRequest</u>, creationDate NN, title NN, description, approved NN, idUser->UserTable, idTask->Task) |
 | R06                | Tag(<u>idTag</u>, name UK NN) |
 | R07                | Tagged(<u>idTask</u>->Task, <u>idTag</u>->Tag) |
 | R08                | Comment(<u>idComment</u>, creationDate NN, content NN, idTask->Task, idUser->User) |
-| R09                | EditCommentInfo(<u>idUser</u>->User, <u>idComment</u>->Comment, editDate NN, oldContent NN) |
+| R09                | EditCommentInfo(<u>idUser</u>->UserTable, <u>idComment</u>->Comment, editDate NN, oldContent NN) |
 | R10                | Thread(idParent->Comment, <u>idSon</u>->Comment) |
 | R11                | Project(<u>idProject</u>, creationDate NN, name NN, description, private NN, idForum->Forum UK) |
-| R12                | Joined(<u>idUser</u>->User, <u>idProject</u>->Project, joinedDate NN, leftDate, role NN) |
+| R12                | Joined(<u>idUser</u>->UserTable, <u>idProject</u>->Project, joinedDate NN, leftDate, role NN) |
 | R13                | PremiumSignature(<u>idPremium</u>, startDate NN, duration CK duration > 0 NN, idUser->User) |
 | R14                | ProjectForum(<u>idForum</u>) |
 | R15                | ForumPost(<u>idPost</u>, creationDate NN, title NN, content NN, idForum->Project Forum, idUser->User) |
 | R16                | Reply(<u>idReply</u>, creationDate NN, content NN, idPost->ForumPost, idUser->User) |
 | R17                | Country(<u>idCountry</u>, name UK NN) |
 | R18                | Admin(<u>idAdmin</u> , username UK NN, password NN, email UK NN) |
-| R19                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > 0, motive, idUser->User, idAdmin->Admin) |
+| R19                | BannedRecord(<u>idBan</u>, startDate NN, duration CK duration > 0, motive, idUser->UserTable, idAdmin->Admin) |
 
 <!--
 UK - UNIQUE
@@ -41,7 +41,8 @@ The specification of additional domains can also be made in a compact form, usin
 
 | Domain Name | Domain Specification                   |
 | ----------- | -------------------------------------- |
-| Role        | ENUM ('Owner' , 'Coordinator', 'Member'|
+| Gender      | ENUM('Male', 'Female', 'Other')        |
+| Role        | ENUM('Owner' , 'Coordinator', 'Member')|
 
 ## 3. Functional Dependencies and schema validation
 
@@ -80,8 +81,279 @@ The specification of additional domains can also be made in a compact form, usin
 
 ## 4. SQL Code
 
-> SQL code necessary to build (and rebuild) the database.
-> This code should also be included in the group's github repository as an SQL script, and a link include here.
+```SQL
+DROP SCHEMA IF EXISTS public CASCADE;
+CREATE SCHEMA public;
+
+/* admin */
+DROP TABLE IF EXISTS public.Admin;
+
+/* UserTable */
+DROP TABLE IF EXISTS public.UserTable;
+
+/* premium signature*/
+DROP TABLE IF EXISTS public.PremiumSignature;
+
+/* country */
+DROP TABLE IF EXISTS public.Country;
+
+/* joined */
+DROP TABLE IF EXISTS public.Joined;
+
+/* project */
+DROP TABLE IF EXISTS public.Project;
+
+/* project forum */
+DROP TABLE IF EXISTS public.ProjectForum;
+
+/* forum post*/
+DROP TABLE IF EXISTS public.ForumPost;
+
+/* reply */
+DROP TABLE IF EXISTS public.Reply;
+
+/* banned record */
+DROP TABLE IF EXISTS public.BannedRecord;
+
+/* task */
+DROP TABLE IF EXISTS public.Task;
+
+/* tag */
+DROP TABLE IF EXISTS public.Tag;
+
+/* tagged */
+DROP TABLE IF Exists public.Tagged;
+
+/* comment */
+DROP TABLE IF EXISTS public.Comment;
+
+/* edit comment info */
+DROP TABLE IF EXISTS public.EditCommentInfo;
+
+/* thread */
+DROP TABLE IF EXISTS public.Thread;
+
+/* completed task*/
+DROP TABLE IF EXISTS public.Completed_Task;
+
+/* close request */
+DROP TABLE IF EXISTS public.CloseRequest;
+
+/* edit task info */
+DROP TABLE IF EXISTS public.EditTaskInfo;
+
+/* assigned */
+DROP TABLE IF EXISTS public.Assigned;
+
+/* dropping old data types*/
+DROP TYPE IF EXISTS public.gender;
+DROP TYPE IF EXISTS public.role;
+
+/* creating data types */
+CREATE TYPE public.gender AS ENUM('Male', 'Female', 'Other');
+CREATE TYPE public.role AS ENUM('Owner' , 'Coordinator', 'Member');
+
+/* country */
+CREATE TABLE public.Country(
+	idCountry serial PRIMARY KEY,
+	name text UNIQUE NOT NULL
+);
+
+/* UserTable */
+CREATE TABLE public.UserTable(
+	idUser serial PRIMARY KEY,
+	UserTablename text UNIQUE NOT NULL,
+	password text NOT NULL,
+	email text UNIQUE NOT NULL,
+	gender gender,
+	name text NOT NULL,
+	address text,
+	institution text,
+	description text,
+	birthDate date CONSTRAINT valid_date CHECK (birthdate < current_date),
+	idCountry integer,
+	FOREIGN KEY(idCountry) REFERENCES Country(idCountry)
+);
+
+/* premium signature */
+CREATE TABLE public.PremiumSignature(
+	idPremium serial PRIMARY KEY,
+	startDate timestamp NOT NULL,
+	duration  interval NOT NULL CHECK (duration > interval '0'),
+	idUser integer,
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
+);
+
+/* project forum */
+CREATE TABLE public.ProjectForum(
+	idForum serial PRIMARY KEY
+);
+
+
+/* project */
+CREATE TABLE public.Project(
+	idProject serial PRIMARY KEY,
+	creationDate timestamp NOT NULL,
+	name text NOT NULL,
+	description text NOT NULL,
+	private boolean NOT NULL,
+	idForum integer UNIQUE NOT NULL,
+	FOREIGN KEY(idForum) REFERENCES ProjectForum(idForum)
+);
+
+/* joined */
+CREATE TABLE public.Joined(
+	idUser integer,
+	idProject integer,
+	joinedDate timestamp NOT NULL,
+	leftDate timestamp,
+	role Role NOT NULL,
+	PRIMARY KEY(idUser, idProject),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idProject) REFERENCES Project(idProject)
+);
+
+/* forum post */
+CREATE TABLE public.ForumPost(
+	idPost serial PRIMARY KEY,
+	creationDate timestamp NOT NULL,
+	title text NOT NULL,
+	content text NOT NULL,
+	idForum integer NOT NULL,
+	idUser integer NOT NULL,
+	FOREIGN KEY(idForum) REFERENCES ProjectForum(idForum),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
+);
+
+/* reply */
+CREATE TABLE public.Reply(
+	idReply serial PRIMARY KEY,
+	creationDate timestamp NOT NULL,
+	content text NOT NULL,
+	idPost integer NOT NULL,
+	idUser integer NOT NULL,
+	FOREIGN KEY(idPost) REFERENCES ForumPost(idPost),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
+);
+
+/* task */
+CREATE TABLE public.Task(
+	idTask serial PRIMARY KEY,
+	creationDate timestamp NOT NULL,
+	title text NOT NULL,
+	description text,
+	deadline timestamp,
+	completed boolean NOT NULL,
+	completedDate timestamp,
+	idUser integer,
+	idProject integer,
+	CONSTRAINT completedDate_valid CHECK (completedDate > creationDate),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idProject) REFERENCES Project(idProject)
+);
+
+/* assigned */
+CREATE TABLE public.Assigned(
+	idUser integer,
+	idTask integer,
+	PRIMARY KEY(idUser, idTask),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idTask) REFERENCES Task(idTask)
+);
+
+/* edit task info */
+CREATE TABLE public.EditTaskInfo(
+	idUser integer,
+	idTask integer,
+	editDate timestamp NOT NULL,
+	oldTitle text NOT NULL,
+	oldDescription text,
+	oldDeadline timestamp,
+	PRIMARY KEY(idUser, idTask),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idTask) REFERENCES Task(idTask)
+);
+
+/* comment */
+CREATE TABLE public.Comment(
+	idComment serial PRIMARY KEY,
+	creationDate timestamp NOT NULL,
+	content TEXT NOT NULL,
+	idTask integer NOT NULL,
+	idUser integer NOT NULL,
+	FOREIGN KEY(idTask) REFERENCES Task(idTask),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser)
+);
+
+/* edit comment info */
+CREATE TABLE public.EditCommentInfo(
+	idUser integer,
+	idComment integer,
+	editDate timestamp NOT NULL,
+	oldContent text NOT NULL,
+	PRIMARY KEY(idUser, idComment),
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idComment) REFERENCES Comment(idComment)
+);
+
+/* tag */
+CREATE TABLE public.Tag(
+	idTag serial PRIMARY KEY,
+	name text UNIQUE NOT NULL
+);
+
+/* tagged */
+CREATE TABLE public.Tagged(
+	idTask integer,
+	idTag integer,
+	PRIMARY KEY(idTask, idTag),
+	FOREIGN KEY(idTask) REFERENCES Task(idTask),
+	FOREIGN KEY(idTag) REFERENCES Tag(idTag)
+);
+
+/* thread */
+CREATE TABLE public.Thread(
+	idSon integer PRIMARY KEY,
+	idParent integer,
+	FOREIGN KEY(idParent) REFERENCES Comment(idComment),
+	FOREIGN KEY(idSon) REFERENCES Comment(idComment)
+);
+
+/* close request */
+CREATE TABLE public.CloseRequest(
+	idRequest serial PRIMARY KEY,
+	creationDate timestamp NOT NULL,
+	title text NOT NULL,
+	description text,
+	aproved boolean NOT NULL,
+	idUser integer,
+	idTask integer,
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idTask) REFERENCES Task(idTask)
+);
+
+/* Admin */
+CREATE TABLE public.Admin(
+	idAdmin serial PRIMARY KEY,
+	UserTablename text UNIQUE NOT NULL,
+	email text UNIQUE NOT NULL,
+	password text NOT NULL
+);
+
+/* Banned record */
+CREATE TABLE public.BannedRecord(
+	idBan serial PRIMARY KEY,
+	startDate timestamp NOT NULL,
+	duration integer NOT NULL,
+	motive text,
+	idUser integer NOT NULL,
+	idAdmin integer NOT NULL,
+	FOREIGN KEY(idUser) REFERENCES UserTable(idUser),
+	FOREIGN KEY(idAdmin) REFERENCES Admin(idAdmin),
+	CONSTRAINT min_time check (duration > 0)
+);
+```
+[Link to the SQL script included in the repository.](https://github.com/mpcmarques/lbaw1743/blob/master/database/plenum.sql)
 
 ***
 <!-- ## Revision history
