--- a/artifacts/A5/A5.md
+++ b/artifacts/A5/A5.md
@@ -4,8 +4,7 @@ This artifact contains the Relational Schema obtained by mapping from the Concep
 
 ## 1. Relational Schema
 
-> The Relational Schema includes the relation schemas, attributes, domains, primary keys, foreign keys and other integrity rules: UNIQUE, DEFAULT, NOT NULL, CHECK.
-> Relation schemas are specified in the compact notation:
+Relation schemas are specified in the compact notation:
 
 | Relation reference | Relation Compact Notation                                            |
 | ------------------ | -------------------------------------------------------------------- |
@@ -37,7 +36,7 @@ CK - CHECK (CONDITION)
 
 ## 2. Domains
 
-The specification of additional domains can also be made in a compact form, using the notation:
+Specification of additional domains:
 
 | Domain Name | Domain Specification                   |
 | ----------- | -------------------------------------- |
@@ -48,33 +47,14 @@ The specification of additional domains can also be made in a compact form, usin
 
 > To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished. Should it be necessary, in case the scheme is not in the Boyce–Codd Normal Form (BCNF), the relational schema is refined using normalization.
 
-| **Table R01**                   ||
-| ------------------------------- ||
-| **Keys**: { id }                ||
-| **Functional Dependencies**     ||
-| FD0101          | id → attribute |
-| **Normal Form** | BCNF           |
+To validate the Relational Schema obtained from the Conceptual Model, all functional dependencies are identified and the normalization of all relation schemas is accomplished.
 
-| **Table R02**                   ||
-| ------------------------------- ||
-| **Keys**: { id }                ||
-| **Functional Dependencies**     ||
-| FD0201          | id → attribute |
-| **Normal Form** | BCNF           |
-
-| **Table R03**                            ||
-| ---------------------------------------- ||
-| **Keys**: { id1, attribute }             ||
-| **Functional Dependencies**              ||
-| FD0301          | {id} → {id2, attribute} |
-| **Normal Form** | BCNF                    |
-
-| **Table R04**                                   ||
-| ----------------------------------------------- ||
-| **Keys**: { (id1, id2) }                        ||
-| **Functional Dependencies**                     ||
-| FD0401          | {(id1,id2)} → {id3, attribute} |
-| **Normal Form** | BCNF                           |
+| **Table R01** (UserTable)           |
+| ------------------------------------|
+| **Keys**: { idUser, username, email}|
+| **Functional Dependencies**         |
+| FD0101          | {idUser}->{username, password, email, premium, banned, name, gender, address, institution, description, birthDate}|
+| **Normal Form** | BCNF              |
 
 > If necessary, description of the changes necessary to convert the schema to BCNF.
 > Justification of the BCNF.
